--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ input {
     display: inline-block;
     height: 30px;
     width: 30px;
-    background: green;
+    background:#04AA6D;
     color: white;
     border-radius: 50%;
     line-height: 30px;
